--- a/index.html
+++ b/index.html
@@ -1,142 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Pop it or Sip it</title>
+<meta charset="UTF-8">
+<title>Card Guessing Game</title>
 
-  <style>
-    /* ---------- GLOBAL STYLES ---------- */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #2a2a40);
-      color: white;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #1e1e2f, #2a2a40);
+    color: white;
+  }
 
-    h1 {
-      text-align: center;
-      padding: 15px;
-      margin: 0;
-      background: rgba(0, 0, 0, 0.4);
-    }
+  h1 {
+    text-align: center;
+    padding: 15px;
+    margin: 0;
+    background: rgba(0,0,0,0.4);
+  }
 
-    /* ---------- MAIN LAYOUT ---------- */
-    .container {
-      display: flex;
-      flex: 1;
-      padding: 20px;
-      gap: 20px;
-    }
+  .container {
+    display: flex;
+    height: calc(100vh - 70px);
+    padding: 20px;
+    gap: 20px;
+  }
 
-    /* ---------- CARD AREA ---------- */
-    .card-area {
-      flex: 3;
-      background: rgba(255, 255, 255, 0.08);
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
+  .card-area {
+    flex: 3;
+    background: rgba(255,255,255,0.08);
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
 
-    .card {
-      width: 250px;
-      height: 350px;
-      background: white;
-      color: black;
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      font-weight: bold;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-      text-align: center;
-      padding: 20px;
-    }
+  .card {
+    width: 280px;
+    height: 360px;
+    background: white;
+    color: black;
+    border-radius: 12px;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 
-    /* ---------- LEADERBOARD ---------- */
-    .leaderboard {
-      flex: 1;
-      background: rgba(0, 0, 0, 0.35);
-      border-radius: 12px;
-      padding: 15px;
-    }
+  button {
+    padding: 10px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+  }
 
-    .leaderboard h2 {
-      text-align: center;
-      margin-top: 0;
-    }
+  .buzzer {
+    background: #ff5252;
+    color: white;
+    font-size: 18px;
+  }
 
-    .player {
-      display: flex;
-      justify-content: space-between;
-      padding: 8px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 6px;
-      margin-bottom: 8px;
-    }
+  .hint-btn {
+    background: #4cafef;
+    margin: 4px;
+  }
 
-    /* ---------- BUTTON ---------- */
-    .draw-button {
-      position: absolute;
-      bottom: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      background: #4cafef;
-      color: black;
-      font-weight: bold;
-    }
-  </style>
+  .leaderboard {
+    flex: 1;
+    background: rgba(0,0,0,0.35);
+    border-radius: 12px;
+    padding: 15px;
+  }
+
+  .player {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    margin-bottom: 8px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 6px;
+  }
+</style>
 </head>
 
 <body>
 
-  <h1>My Card Game</h1>
+<h1>Guess the Card</h1>
 
-  <div class="container">
-    <!-- CARD AREA -->
-    <div class="card-area">
-      <div class="card" id="cardText">
-        Draw a card
-      </div>
-      <button class="draw-button" onclick="drawCard()">Draw Card</button>
-    </div>
+<div class="container">
 
-    <!-- LEADERBOARD -->
-    <div class="leaderboard">
-      <h2>Leaderboard</h2>
-      <div class="player">
-        <span>Player 1</span>
-        <span>0</span>
-      </div>
-      <div class="player">
-        <span>Player 2</span>
-        <span>0</span>
-      </div>
+  <!-- GAME AREA -->
+  <div class="card-area">
+    <div id="roleText"></div>
+
+    <div class="card" id="cardText">Waiting for round…</div>
+
+    <button id="buzzerBtn" class="buzzer" onclick="buzzIn()" style="display:none;">
+      BUZZ IN
+    </button>
+
+    <div id="hintControls" style="display:none;">
+      <button class="hint-btn" onclick="scorePoint(3)">First Hint (+3)</button>
+      <button class="hint-btn" onclick="scorePoint(2)">Second Hint (+2)</button>
+      <button class="hint-btn" onclick="scorePoint(1)">Third Hint (+1)</button>
+      <button class="hint-btn" onclick="scorePoint(0)">Wrong (0)</button>
     </div>
   </div>
 
-  <script>
-    const cards = [
-      "Take a sip",
-      "Give a sip",
-      "Truth",
-      "Dare",
-      "Everyone drinks"
-    ];
+  <!-- LEADERBOARD -->
+  <div class="leaderboard">
+    <h2>Leaderboard</h2>
+    <div id="players"></div>
+  </div>
 
-    function drawCard() {
-      const randomIndex = Math.floor(Math.random() * cards.length);
-      document.getElementById("cardText").innerText = cards[randomIndex];
+</div>
+
+<script>
+  const cards = [
+    "Describe this movie without saying its name",
+    "Guess the song from the hum",
+    "Explain this object using only gestures",
+    "Describe a celebrity without saying their name"
+  ];
+
+  let players = [
+    { name: "Player 1", score: 0 },
+    { name: "Player 2", score: 0 },
+    { name: "Player 3", score: 0 }
+  ];
+
+  let readerIndex = 0;
+  let activeGuesser = null;
+
+  function startRound() {
+    activeGuesser = null;
+
+    document.getElementById("cardText").innerText =
+      cards[Math.floor(Math.random() * cards.length)];
+
+    document.getElementById("roleText").innerText =
+      `${players[readerIndex].name} is the READER`;
+
+    document.getElementById("buzzerBtn").style.display = "block";
+    document.getElementById("hintControls").style.display = "none";
+
+    renderLeaderboard();
+  }
+
+  function buzzIn() {
+    activeGuesser = (readerIndex + 1) % players.length;
+
+    document.getElementById("buzzerBtn").style.display = "none";
+    document.getElementById("hintControls").style.display = "block";
+
+    document.getElementById("roleText").innerText =
+      `${players[activeGuesser].name} is guessing`;
+  }
+
+  function scorePoint(points) {
+    if (activeGuesser !== null) {
+      players[activeGuesser].score += points;
     }
-  </script>
+
+    readerIndex = (readerIndex + 1) % players.length;
+    startRound();
+  }
+
+  function renderLeaderboard() {
+    const container = document.getElementById("players");
+    container.innerHTML = "";
+
+    players.forEach(p => {
+      const div = document.createElement("div");
+      div.className = "player";
+      div.innerHTML = `<span>${p.name}</span><span>${p.score}</span>`;
+      container.appendChild(div);
+    });
+  }
+
+  startRound();
+</script>
 
 </body>
 </html>
