--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Pop it Or Sip it</title>
+<title>Guess the Card</title>
 
 <style>
   body {
