Change title from 'Guess the Card' to 'Pop it or Sip it'

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Guess the Card</title>
-
+<title>Pop it or Sip it</title>
 <style>
   body {
     margin: 0;
